# MyCloudRobot

./: .gitignore  CI_TROUBLESHOOTING.md  Dockerfile.test  README.md  docker-compose.yml  install-docker.sh  部署注意事项.md  问题及解决.md  问题及解决2.md  问题及解决3.md
.github/workflows/: cd-deploy.yml  ci-base-image.yml  ci-build-test.yml
docker/: Dockerfile  Dockerfile.base  entrypoint.sh  nginx.conf
ros_ws/src/cloud_monitor_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/cloud_monitor_pkg/cloud_monitor_pkg/: param_service_node.py  path_planner_node.py  simulator_node.py
ros_ws/src/cloud_monitor_pkg/cloud_monitor_pkg/resource/: cloud_monitor_pkg
ros_ws/src/cloud_monitor_pkg/launch/: system.launch.py  system_launch.py
tests/:  integration_test.py  integration_test.py
web/: index.html
web/static/: style.css
